--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deep-freeze": "0.0.1",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
+    "gulp-webserver": "^0.9.1",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
     "redux-mock-store": "^1.1.2",
